# tcmlabs

./: .gitignore  README.md  business-invariants-in-python.md  gatsby-config.js  gatsby-node.js  jest.config.js  netlify.toml  package.json  shell.nix  tcmlabs.code-workspace
articles/: TypeScript-GraphQL-typechecking-with-IDE-integration.md
python-playground/: .flake8  .gitignore  pyproject.toml
python-playground/src/: app.py  calculus.py  calculus_test.py  main_test.py
src/: globalStyles.js
src/components/: Button.tsx  Footer.tsx  Grid.tsx  JobApplicationForm.tsx  JobOffer.tsx  TeamMember.tsx  Typography.tsx
src/components/home/: JoinTheLabsSection.tsx  TeamSection.tsx  WhatWeDoSection.tsx
src/jobs/: gatsby-config.js  gatsby-node.js
src/jobs/content/: devops.md  fullstack.md
src/layouts/: index.tsx
src/pages/: index.tsx  jobs.jsx  team.tsx
src/team/: gatsby-config.js  gatsby-node.js
src/team/content/: jeanbaptiste.md  richard.md
src/team/templates/: teamMember.tsx
src/templates/: JobOfferTemplate.tsx
tcmlabs.fr/: .editorconfig  .eslintrc.js  .gitignore  .mbt.yml  .prettierrc  README.md  codegen.yml  gatsby-node.js  package.json  tsconfig.json  tslint.json
tcmlabs.fr/src/: index.test.js
tcmlabs.fr/src/articles/business-invariants/: part-0-introduction.md  part-1-static-type-checking.md  part-2-property-based-testing.md  (+1 more)
tcmlabs.fr/src/components/: Button.tsx  ContentWrapper.tsx  Footer.tsx  JobApplicationForm.tsx  JobOffer.tsx  Logo.tsx  SectionTitle.tsx  TeamMember.tsx
tcmlabs.fr/src/pages/: index.tsx  jobs.jsx  team.tsx
(+6 files in other folders)
