[tool.poetry]
name = "tcmlabs"
version = "0.1.0"
description = ""
authors = ["TCM Labs"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.6"
pycomb = "^0.1.16"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
pytest = "^4.5"
hypothesis = "^4.24"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
